[package]
name = "hftwo"
description = "A library for working with the HF2 protocol."
version = "0.1.2"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/umi-eng/hftwo"

[dependencies]
crc = "3.0"
defmt = { version = "0.3", optional = true }
zerocopy = { version = "0.7", features = ["derive"] }

[features]
defmt-03 = ["dep:defmt"]
